Added search bar with autocomplete presentation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <h1>
   Welcome to my {{title}}!
 </h1>
-
-<button type="button" routerLink="">Home</button>
-<button type="button" routerLink="/search">Search bar</button>
-
+<button type="button" routerLink="/search">Show search bar</button>
+<button type="button" routerLink="">Hide search bar</button>
 <router-outlet></router-outlet>
