--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -8,3 +8,27 @@
 .search-form-field {
     width: 50%;
 }
+
+#search-button {
+    padding: 10px 25px; 
+    min-width: 150px;
+    width: 50px;
+    margin: 1%;
+    border-radius: 12px;
+    border-color: black;
+    font-weight: bold;
+    color: black;
+    background-color: #00ff00;
+}
+
+#search-button:hover {
+    background-color: #3f51b5;
+    border-color: black;
+    background-color: #008c00;
+    color: white;
+    cursor: pointer;
+}
+
+button {
+    display: block;
+}
